# BookingApp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pre-commit.yml
src/booking/: documentation.py  models.py  serializers.py  urls.py  views.py
src/booking/migrations/: 0001_initial.py
src/booking/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
src/core/: settings.py  urls.py
